--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: esphome/build-action@v2.2.0
+      - uses: esphome/build-action@main
         with:
           yaml_file: victron100.yaml
           version: latest
