--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: victron-bin
-          path: .esphome/build/victron100/.pioenvs/victron100/firmware.bin
+          path: .esphome/build/victron100/.pioenvs/victron100/*.bin
